; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_cred_default.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_clone.c_cred_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_CREDTYPE_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cred_default(i32** %0, i8* %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i32** %0, i32*** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @GIT_UNUSED(i8* %12)
  %14 = load i8*, i8** %9, align 8
  %15 = call i32 @GIT_UNUSED(i8* %14)
  %16 = load i8*, i8** %11, align 8
  %17 = call i32 @GIT_UNUSED(i8* %16)
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* @GIT_CREDTYPE_DEFAULT, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %26

23:                                               ; preds = %5
  %24 = load i32**, i32*** %7, align 8
  %25 = call i32 @git_cred_default_new(i32** %24)
  store i32 %25, i32* %6, align 4
  br label %26

26:                                               ; preds = %23, %22
  %27 = load i32, i32* %6, align 4
  ret i32 %27
}

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i32 @git_cred_default_new(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
